--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ a:hover {
     text-decoration: none;
 }
 
-.font-preloadz {
+.font-preload {
     position: absolute; 
     overflow: hidden; 
     clip: rect(0 0 0 0); 
